# shiori_hglobal_rs

./: Cargo.toml  README.md  appveyor.yml
src/: enc.rs  lib.rs  windows.rs
