[package]
name = "shiori_hglobal"
version = "0.1.2"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/shiori_hglobal_rs"
keywords = ["shiori", "ukagaka"]
license = "MIT"
readme = "README.md"
description = "impl str for HGLOBAL{...}"

[dependencies]
local-encoding = "^0.2"

[target."cfg(windows)".dependencies]
kernel32-sys = "^0.2"
winapi = "^0.2"
